# suv24.uz

./: .env.example  .env.production.example  .gitignore  README.md  ROADMAP.md  WDMS_TZ_v2.docx  deploy.md  docker-compose.prod.yml  docker-compose.yml  steps.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260420_1900_initial_companies.py  20260420_1930_users.py  20260420_2000_customers.py  20260420_2030_products.py  20260420_2100_drivers.py  20260420_2130_orders.py  20260421_0900_payments.py  20260421_0930_driver_bottle_balance.py  20260422_0300_company_branding.py  20260422_1200_platform_owner.py  20260422_1500_leads.py  20260428_1000_warehouse.py  20260428_1200_cash.py  20260506_1500_purchase_split_cost.py
backend/app/: main.py
backend/app/api/v1/: auth.py  bottles.py  cash.py  leads.py  (+11 more)
backend/app/cli/: seed.py
backend/app/core/: config.py  database.py  deps.py  logging.py  rate_limit.py  redis.py  security.py  tariff.py
backend/app/models/: __init__.py  base.py  bottle.py  cash.py  company.py  customer.py  driver.py  lead.py  order.py  payment.py  product.py  user.py  warehouse.py
backend/app/repositories/: address.py  bottle.py  company.py  customer.py  driver.py  order.py  payment.py  product.py  user.py
backend/app/schemas/: address.py  auth.py  bottle.py  cash.py  common.py  company.py  customer.py  driver.py  lead.py  order.py  pagination.py  payment.py  platform.py  product.py  user.py  warehouse.py
backend/app/services/: auth.py  bottle.py  customer.py  order.py  payment.py  product.py
backend/scripts/: gen_favicon.py  postgres-init.sql
backend/tests/: test_health.py
(+103 files in other folders)
